--- a/Socialcb/pom.xml
+++ b/Socialcb/pom.xml
@@ -239,6 +239,14 @@
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>1.3.2.RELEASE</version>
 		</dependency>
+
+		<!-- Jackson Json mapper -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
